--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     color: #707070;
     margin-left: 5em;
     transition: 2s ease;
+    background: url('annie-spratt-xTaOPMa6wAE-unsplash.jpg');
+    background-size: 2000px;
 }
 .top{
     box-shadow: 2px 2px 2px 2px lightgray;
@@ -10,7 +12,7 @@ body{
     height: 300px;
     line-height: 35px;
     width: 90%;
-    
+    background-color: #fcfbf9;
 }
 
 .left{
@@ -76,4 +78,17 @@ a:hover{
     height: 70px;
     border: 2px #707070 solid;
     border-radius: 50%;
+}
+
+footer{
+    padding: 10px;
+    align-items: center;
+}
+
+.socials{
+    font-size: 30px;
+}
+
+.lists{
+    margin-left: 38%;
 }
